# drf_spa_habits

./: .env_template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  id_ed25519.pub  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
config/: celery.py  settings.py  urls.py
habits/: models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validator.py  views.py
habits/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
